Restored Exit Module names.

--- a/AdcsExitModule/AdcsExitModule.csproj
+++ b/AdcsExitModule/AdcsExitModule.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net472</TargetFramework>
@@ -6,7 +6,6 @@
     <SignAssembly>False</SignAssembly>
     <AssemblyOriginatorKeyFile>StrongName.snk</AssemblyOriginatorKeyFile>
     <Nullable>enable</Nullable>
-    <Platforms>x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
@@ -62,10 +61,10 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
-    <None Update="Files\Uninstall-CertSrvExitModule.ps1">
+    <None Update="Scripts\Uninstall-CertSrvExitModule.ps1">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="Files\Install-CertSrvExitModule.ps1">
+    <None Update="Scripts\Install-CertSrvExitModule.ps1">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
