--- a/AdcsCertificateWebApi/appsettings.json
+++ b/AdcsCertificateWebApi/appsettings.json
@@ -1,13 +1,15 @@
 {
     "ConnectionStrings": {
-        "AuthDb": "Server=s98470a24b3a001.frs98470.localdns.nl;Database=AdcsCertificateDbV2;Trusted_Connection=True;TrustServerCertificate=True;"
+        "AuthDb": "Server=s98470a24b3a001.frs98470.localdns.nl;Database=AdcsCertificateDbV2;Integrated Security=True;TrustServerCertificate=True"
+    },
+        "ActiveDirectory": {
+            "GroupName": "FRS98470\\grp98470c47-sys-l-A47-ManangeAPI",
+            "PrimaryDomain": "FRS98470.localdns.nl"
     },
     "Logging": {
         "LogLevel": {
-            "Default": "Trace",
-            "Microsoft.AspNetCore": "Trace",
-            "AdcsCertificateApi": "Trace"
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
         }
-    },
-    "AllowedHosts": "*"
+    }
 }
